--- a/argocd/apps/media-server/kometa/manifests/secrets.yaml
+++ b/argocd/apps/media-server/kometa/manifests/secrets.yaml
@@ -4,15 +4,15 @@ metadata:
     name: kometa-secrets
 type: Opaque
 stringData:
-    PLEX_TOKEN: ENC[AES256_GCM,data:4eQ6R5aWs0ZhyQ83LFQ2CJaKkYM=,iv:zXkewykc8qjNpt2eSRjQcHDINwSwHP20OeVCj1KuEvI=,tag:7565VeOwK0R0X10UIxntNw==,type:str]
-    TMDB_API_KEY: ENC[AES256_GCM,data:xKTqhqDAZdnH/1BOA2c0k9uaSE4ckyNPQQ4RWBOMT0c=,iv:tZnes/qHVMxvmvfPhtIAfRjfkZRQIR4gwr49WIgYKVY=,tag:3GQH3x0mFRZSfUfKE12w+Q==,type:str]
-    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:PL0APgt9SeNSkgPSpuzbAEMKBRm1VjIAMZjdq+Z5ea6ZYmwlfubZUJ6X6ZBSHKp2FVMsTcaChYN7nLkJZhelTg==,iv:K79wePHln7td2chRDzTaHWWFl10HYJmQAkZVRdFjBwI=,tag:Q2HY6oHZ7wJ/jQsTWIJRMw==,type:str]
-    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:xaWFsTsH4mFZmQNnIiXGBy3gNo3RqJeWcmThljMu8KUm1HUkgu7dQ0AWmGxR92FkUGId08oh0tmwMUlZDG++LQ==,iv:23+nrK9gWpqFVBXlFbXbe8ohb2AfhcUiOuxDD2FShyg=,tag:/1d2RtvuCUUgRVK5nCR11Q==,type:str]
-    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:z5nJmi9HyrzC4HZpsvrk54V7W4WBW4Juhe7kxq2XTbV/0X3fpEFtqKNcA24tyJIJMlFUW4tJ3dvZ89lH1T+HcA==,iv:UQ7xsBXfmLKIm9QawuLomjxrZDlJyvHcRj3pil6XO/0=,tag:PtEuNTjRbsfk/HkeNTLLWA==,type:str]
-    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:/GgtDUkfCa7ocx5VcFsiIkSVDZzAMzCJvB2TPGCrGwuAR5Ubxl9n0E8iUq/NsRO2SbegupRY1RQcxHlepqLjMg==,iv:i34CN6Z1njlJVrq8LvucOcki+BPRGf+qoIKset4tN8w=,tag:UNY8Gm+vi33tHbz0wvyKoA==,type:str]
-    MDBLIST_API_KEY: ENC[AES256_GCM,data:2L7h4wsWwgQAFWlVdNAVJ+yp/WRQv5/lOw==,iv:BB9b1GlQGt8M87wG7LOtib3xE7wfHIW0N5nmfjKBURk=,tag:tfx5wxkWrQPjCu3EfS185g==,type:str]
-    RADARR_TOKEN: ENC[AES256_GCM,data:JR2adyCxP5agPEXdqiwpVfVQdsaKqLd8TLTz9sCdsT0=,iv:DBgA2BQyLk3CYiheZHoCVunGYqKc1lVlA0hX39mrkjM=,tag:cijeHgglOspkIhiFh43f3A==,type:str]
-    SONARR_TOKEN: ENC[AES256_GCM,data:8xZv8iaOSGtp9f9MHpJMS2CYiOCXzCxJHf2qDI2aykM=,iv:mWpsXwoBfcHhu1nJx0dDLsjnFr3lQIAanZY6gmUP6RQ=,tag:tH/aWC2xXOWYAb0CfmMQHA==,type:str]
+    KOMETA_PLEX_TOKEN: ENC[AES256_GCM,data:k1KlvrkOedDHBpmNHwYWRVMhrE4=,iv:Fdi9hhFkTnKhsmdauURO7JDtEy4dipOgwGbzr9a+naI=,tag:0DQww9tYO6CPw4FMU6HHdQ==,type:str]
+    KOMETA_TMDB_API_KEY: ENC[AES256_GCM,data:jRTKxSmVUWKfqW2w503qj+e6K0KADvTyxnDLhWE2ziA=,iv:4BNIEBQWRi65j3UYxuQBbfaAon6NAylRkE2UbiCQ9DA=,tag:BI4WsZ+vSW/4z9Hx6PLJCg==,type:str]
+    KOMETA_TRAKT_CLIENT_ID: ENC[AES256_GCM,data:cMYcnpbl2v9j/344Iri6IbVbOwf9kqrpbmaK7P7efiH//omcbNVYpuQJtXllxuKSgKSQLdnDV20ZtHEHzZunQQ==,iv:gGu8at+jJ7q/TznefNUd9brgdskRmUp4nSGBn9S1hiM=,tag:xwc8f5usiu4i7eRHizfGxA==,type:str]
+    KOMETA_TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:MiyhsOONlBsTY/5MLrV1uW9Rs9dEDtMIUvi1uRqWydOE60/YXiucswjGBev+zHNC5hv97yd0kYRjHoBJjoAzHw==,iv:6Qnng77/Dlzzd7goMQsmMk9BNHnKc2d55T+N4uuVc1g=,tag:XlBJU6wmlMP8e+hN8UjWyw==,type:str]
+    KOMETA_TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:si+amB1qGlZK3/Y/UM8F1QIHPvO5iM9AkBnbuW4IPcZqvRXV19BOsx/o/RlqnSAe9tyYFBmPiZ3FqpSqIZ7hUA==,iv:aOupZ90KpY3aVQp/LnQItaqFjRMyLk7IF9hPm5xZ8IQ=,tag:dE7YC//AGT3mVlfbl/Uv0Q==,type:str]
+    KOMETA_TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:7/2HjXGAljttzRN3gZ9ji6G3yts5Z7HI99vB47JsbATbqCPdgSzSgQfHQ7VzorsJVMf0FIH5e4BmgViZetdGtw==,iv:zfWo6aaCucer4bWhT2ylaAv2QBgXLjtcVheq43blODA=,tag:6tzQwfVuA9ftlqabxMVq5Q==,type:str]
+    KOMETA_MDBLIST_API_KEY: ENC[AES256_GCM,data:LYxbMCjxTKifac6rW7SGA+BRDBLc360NLg==,iv:sJIbYZ8n7QXqfylToA0o5NIKJo/nng04oYef+TxeIL0=,tag:VdY273JTtOEWN3dRBbr1Bw==,type:str]
+    KOMETA_RADARR_TOKEN: ENC[AES256_GCM,data:DtZJLk94i1u8ZyjVf9CYmQdSUj1MC76tC7CIHOzZxMk=,iv:sFoBHIssFbLdPw4VggfXLPGXE5XNZV/BkaBVIJ2HG0A=,tag:wo/0WRTjqJKcFBC5t9XZTA==,type:str]
+    KOMETA_SONARR_TOKEN: ENC[AES256_GCM,data:kB8AaHCKelNxbEsEQF8O5c/1fL1962SdVPTV9DmvGbQ=,iv:AhT1XV1Wf8accW8kYHN0BKCYPoayMIiuXRzd/Z5G1Ec=,tag:h2QP5vOMxpi3yJXHL+t2MQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -28,8 +28,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-19T00:37:42Z"
-    mac: ENC[AES256_GCM,data:CmOh8ikQUw6P2Wk4mN2Vo7TOGPKJa+2Hu2FwKRMt4YK9vXYjqDaOwxPA8nmAter0FxnxTVcsxSjG3txD7XpunNduVKcJoRDPCKemgv1eVnUAwUmFJLkYaN+70Zn4bKtPlG3RgV+Z702T5x3JWIEahLZiup0C7mup0wo1ylCHXJk=,iv:kRdlGG6bD3MlU0TiT8MMf9cSn3wzqGZI8KgMt5Z4yVA=,tag:J//DZBexZdM0HJAFMnK//w==,type:str]
+    lastmodified: "2025-03-19T01:22:37Z"
+    mac: ENC[AES256_GCM,data:BtsxhtOJez4OeQWJaiZQdmfjigbz5cZus6xydPjVdCTT1bsUIvhFgvvcY/+05iXMYSCDAt2sgrsm+yfGPfZmOpvJcwJI6W6nzpFXyEEtK0xyavGPL9IwM5TItf7vaYznG/fCYqshJBgHLx3kzf8VnxEmKZ5DJmzzmOlb7aWbN8Q=,iv:XNOwtsLRMVIBqYygpr47cpwDmEbbgU7ZNtGL6f72hsY=,tag:6vsncKsvsFiXev7kz0f0og==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
