--- a/argocd/apps/media-server/kometa/manifests/cm.yaml
+++ b/argocd/apps/media-server/kometa/manifests/cm.yaml
@@ -158,7 +158,7 @@ data:
       show_unfiltered: false
     plex: # Can be individually specified per library as well; REQUIRED for the script to run
       url: https://plex.yanello.net
-      token: ${PLEX_TOKEN}
+      token: <<PLEX_TOKEN>>
       timeout: 60
       clean_bundles: true
       empty_trash: true
@@ -166,27 +166,27 @@ data:
       db_cache:
       verify_ssl:
     tmdb: # REQUIRED for the script to run
-      apikey: ${TMDB_API_KEY}
+      apikey: $<<TMDB_API_KEY>>
       language: en
       cache_expiration: 60
       region:
     trakt:
-      client_id: ${TRAKT_CLIENT_ID}
+      client_id: <<TRAKT_CLIENT_ID>>
       client_secret: ${TRAKT_CLIENT_SECRET}
       pin:
       authorization:
-        access_token: ${TRAKT_ACCESS_TOKEN}
+        access_token: <<TRAKT_ACCESS_TOKEN>>
         token_type: Bearer
         expires_in: 7889237
-        refresh_token: ${TRAKT_REFRESH_TOKEN}
+        refresh_token: <<TRAKT_REFRESH_TOKEN>>
         scope: public
         created_at: 1732370414
     mdblist:
-      apikey: ${MDBLIST_API_KEY}
+      apikey: <<MDBLIST_API_KEY>>
       cache_expiration: 60
     radarr:
       url: https://radarr.yanello.net
-      token: ${RADARR_TOKEN}
+      token: <<RADARR_TOKEN>>
       add_missing: false
       add_existing: false
       upgrade_existing: false
@@ -203,7 +203,7 @@ data:
       monitor_existing: false
     sonarr:
       url: https://sonarr.yanello.net
-      token: ${SONARR_TOKEN}
+      token: <<SONARR_TOKEN>>
       add_missing: false
       add_existing: false
       root_folder_path: /data/media/TV
