--- a/argocd/apps/media-server/kometa/kustomization.yaml
+++ b/argocd/apps/media-server/kometa/kustomization.yaml
@@ -5,5 +5,6 @@ generators:
 - ./manifests/secret-generator.yaml
 
 resources:
-- ./manifests/cm.yaml
+- ./manifests/config.yaml
+- ./manifests/movies-cm.yaml
 - ./manifests/cronjob.yaml
