--- a/argocd/apps/media-server/kometa/manifests/cronjob.yaml
+++ b/argocd/apps/media-server/kometa/manifests/cronjob.yaml
@@ -51,9 +51,9 @@ spec:
                 requests:
                   memory: "256Mi"
                   cpu: "200m"
-                limits:
-                  memory: "512Mi"
-                  cpu: "500m"
+                # limits:
+                #   memory: "512Mi"
+                #   cpu: "500m"
           volumes:
             - name: config-kometa
               configMap:
