--- a/argocd/apps/homepage/manifests/deploy.yaml
+++ b/argocd/apps/homepage/manifests/deploy.yaml
@@ -23,6 +23,9 @@ spec:
         - name: homepage
           image: "ghcr.io/gethomepage/homepage:latest"
           imagePullPolicy: Always
+          envFrom:
+            - secretRef:
+                name: home-secrets
           env:
             - name: HOMEPAGE_ALLOWED_HOSTS
               value: home.yanello.net
