--- a/argocd/apps/ytdl/deploy.yaml
+++ b/argocd/apps/ytdl/deploy.yaml
@@ -1,14 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose -f ytdl.yaml convert
-    kompose.version: 1.35.0 (HEAD)
-  labels:
-    io.kompose.service: ytdl
   name: ytdl
 spec:
-  replicas: 0
+  replicas: 1
   selector:
     matchLabels:
       io.kompose.service: ytdl
@@ -19,11 +14,7 @@ spec:
       maxSurge: 1
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose -f ytdl.yaml convert
-        kompose.version: 1.35.0 (HEAD)
-      labels:
-        io.kompose.service: ytdl
+      name: ytdl
     spec:
       initContainers:
         - name: wait-for-mongodb
@@ -109,11 +100,6 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose -f ytdl.yaml convert
-    kompose.version: 1.35.0 (HEAD)
-  labels:
-    io.kompose.service: ytdl-mongo-db
   name: ytdl-mongo-db
 spec:
   replicas: 0
