--- a/argocd/apps/ytdl/manifests/sts.yaml
+++ b/argocd/apps/ytdl/manifests/sts.yaml
@@ -161,9 +161,9 @@ spec:
         - image: mongo:8.0.5@sha256:7bd28e5eea1c5766a084d5818254046f3ebe3b8f20a65e3a274640189e296667
           name: ytdl-mongo-db
           resources:
-            limits:
-              cpu: 100m
-              memory: 500Mi
+            # limits:
+            #   cpu: 100m
+            #   memory: 500Mi
             requests:
               cpu: 25m
               memory: 200Mi
