--- a/argocd/apps/ytdl/manifests/sts.yaml
+++ b/argocd/apps/ytdl/manifests/sts.yaml
@@ -194,7 +194,7 @@ spec:
     - metadata:
         name: db
       spec:
-        storageClassName: longhorn
+        storageClassName: nfs-storage
         accessModes:
           - ReadWriteOnce
         resources:
