--- a/argocd/apps/ytdl/kustomization.yaml
+++ b/argocd/apps/ytdl/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
 
 helmCharts:
     - name: youtubedl-material
-      repo: https://tzahi12345.github.io/YoutubeDL-Material/
+      repo: https://tzahi12345.github.io/YoutubeDL-Material/chart/
       version: "0.2.0"
       releaseName: youtubedl-material
       namespace: ytdl
