--- a/argocd/apps/ytdl/kustomization.yaml
+++ b/argocd/apps/ytdl/kustomization.yaml
@@ -3,14 +3,14 @@ kind: Kustomization
 
 resources:
   - ./manifests/http-route.yaml
-  # - ./manifests/service.yaml
-  # - ./manifests/sts.yaml
-  # 
+  - ./manifests/service.yaml
+  - ./manifests/sts.yaml
 
-helmCharts:
-    - name: youtubedl-material
-      repo: https://tzahi12345.github.io/YoutubeDL-Material/chart/
-      version: "0.0.1"
-      releaseName: youtubedl-material
-      namespace: ytdl
-      valuesFile: ./manifests/values.yaml
+
+# helmCharts:
+#     - name: youtubedl-material
+#       repo: https://tzahi12345.github.io/YoutubeDL-Material/chart/
+#       version: "0.0.1"
+#       releaseName: youtubedl-material
+#       namespace: ytdl
+#       valuesFile: ./manifests/values.yaml
