open web ui sso

--- a/argocd/apps/open-webui/manifests/values.yaml
+++ b/argocd/apps/open-webui/manifests/values.yaml
@@ -23,3 +23,26 @@ pipelines:
     storageClass: nfs-storage
     accessMode: ReadWriteOnce
     size: 10Gi
+
+extraEnvVars:
+  - name: OAUTH_CLIENT_ID
+    valueFrom:
+      secretKeyRef:
+        name: chat-secrets
+        key: OAUTH_CLIENT_ID
+  - name: OAUTH_CLIENT_SECRET
+    valueFrom:
+      secretKeyRef:
+        name: chat-secrets
+        key: OAUTH_CLIENT_SECRET
+  - name: OAUTH_PROVIDER_NAME
+    value: Authentik
+  - name: OPENID_PROVIDER_URL
+    valueFrom:
+      secretKeyRef:
+        name: chat-secrets
+        key: OAUTH_PROVIDER_URL
+  - name: ENABLE_OAUTH_SIGNUP
+    value: 'true'
+  - name: OAUTH_MERGE_ACCOUNTS_BY_EMAIL
+    value: 'true'
