--- a/argocd/apps/open-webui/kustomization.yaml
+++ b/argocd/apps/open-webui/kustomization.yaml
@@ -1,10 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+generators:
+  - manifests/secret-generator.yaml
+
 resources:
   - manifests/vs.yaml
   - manifests/gw.yaml
   - manifests/http-route.yaml
+
 helmCharts:
   - name: open-webui
     repo: https://helm.openwebui.com/
