open web ui sso3

--- a/argocd/apps/open-webui/manifests/values.yaml
+++ b/argocd/apps/open-webui/manifests/values.yaml
@@ -27,19 +27,19 @@ pipelines:
 extraEnvVars:
   - name: OAUTH_CLIENT_ID
     valueFrom:
-      secretKeyREf:
+      secretKeyRef:
         name: chat-secrets
         key: OAUTH_CLIENT_ID
   - name: OAUTH_CLIENT_SECRET
     valueFrom:
-      secretKeyREf:
+      secretKeyRef:
         name: chat-secrets
         key: OAUTH_CLIENT_SECRET
   - name: OAUTH_PROVIDER_NAME
     value: authentik
   - name: OAUTH_PROVIDER_URL
     valueFrom:
-      secretKeyREf:
+      secretKeyRef:
         name: chat-secrets
         key: OAUTH_PROVIDER_URL
   - name: ENABLE_OAUTH_SIGNUP
