open web ui sso3

--- a/argocd/apps/open-webui/manifests/secrets.yaml
+++ b/argocd/apps/open-webui/manifests/secrets.yaml
@@ -4,9 +4,9 @@ metadata:
     name: chat-secrets
 type: Opaque
 stringData:
-    OATH_CLIENT_ID: ENC[AES256_GCM,data:MgG7ntND2bOwPIeAzYBnnPnOlqGSikp3ZTS3EdtonSAZnGWOgjNUig==,iv:4ab+a9B7gmO3Au57SPwYsZDfGhKorS2xN5F0MhFUCDA=,tag:Z4GxZ97pHWrh6JSRirweUw==,type:str]
-    OATH_CLUIENT_SECRET: ENC[AES256_GCM,data:rXeOgnMsUwbIqIPNQUOEarrgs+NWiRk7ltHhJHRzUmZ7ufCTrl7Sh7Kje+u+M1n7kiOvZXx4oIXaGSTF5v8N/FrBiSNrnTGdDPWdzpZF1FF9oop5GJtjJIanwrMUv0biicWmXv0XhVPZ2d0O4rxTf5fsiYL+xk8WsgmMFlhihrE=,iv:PfjK8OaHNPLrsaWcKTQvWxIdUkJVDAGpIGpEiiokTaM=,tag:4W1ZkxwLl5HMnWh0Wq1lkg==,type:str]
-    OAUTH_PROVIDER_URL: ENC[AES256_GCM,data:2JfJnMfD7BdOujtkD+zjeCGVTWN0zoQOKsvknepAEmMk5CpfBizcXOfEjhy9zDyR9XgVEpbJmXRx4a17rNIDyUdDitmpg1QBkge8gY4zRM4ujc4yjiEW,iv:vql0d3E+pKh08rrqK/HIFJJjPuj/Z2nvhkFUy74tvBY=,tag:CpByeFKU8TAIXykTzZgGkQ==,type:str]
+    OAUTH_CLIENT_ID: ENC[AES256_GCM,data:0+q0UITOhkyGWqbDGLhcHjbEUXfiAE4IUOM4mlkLvZb3QFbUXBQmqg==,iv:PJUzD2qAhlq0R21NZFx3RmGkV4IyyhOJJFJKjJo5yYk=,tag:egTcvDVP/Erm4tIv/aSDTg==,type:str]
+    OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:VDZDwQkIpOiZuy8iwh4DNj7SKlFfJN1VOa9+i+aJmIcgX+Fqrdhv5WjsWIp0NoTin3WTMxWuaS3owy2rplbEhji+o4/aS4lXVnnGyxAVMOb5p3pdkeNXz1hAZUQJFlBKpbd0s3ZXH287oM3cul3Ij/Wk7LBQqqbcrcivG9+3P1g=,iv:b3LCaPgXwq0hDBge5ci+gh5uO9Dwa5RvU+LikCGj25I=,tag:+qVmUg06W8qUL1+w5SxEAQ==,type:str]
+    OPENID_PROVIDER_URL: ENC[AES256_GCM,data:1tDIBWdg/Vxv4oUlvYe1nSzpvj3eoUEj7pjlRF95ZvrMUI+HKDQeWGRfHOxzgwi3SOzArb+avvuHixxnX+rPTgMCehdLH8qkS3qDVnzXOYuJGaWhBB19,iv:5yBa4C/KtV71VhwQ1jCGJMjlqQCJ+XRS4igfd5z2aNs=,tag:oEqdzEhXmWSgmY5XSrFXzQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-24T17:42:37Z"
-    mac: ENC[AES256_GCM,data:HdK8XGSbKwU8hwII9vCwser9kjuR72W4P5FbDFSvORzC0c/D35mKp+uzU8UyqHhjQLWePD8pdQe/gyAzWD+NFlwrXxPEey+9Ynr7QEP9m+HhBSHSVm673Nn7zXIOQ2wRQYEnlU0Qagf4fsWR7b4dw+EWeMmMc1ea9A5nxfXwdCI=,iv:8IU/GyG6aXvSP8K6Myake6I4AfBxixhyvRUIhsZakmI=,tag:E08lne0FiGtUMlwEx8kF7Q==,type:str]
+    lastmodified: "2025-03-24T19:53:23Z"
+    mac: ENC[AES256_GCM,data:E3Z9jv0v66WeG1OI9UPpJlWrHGiTE54AJl49WGpfLCwd7MbradXZudlXmbgrjLNzZfvEGmWozgF65OHVNL3tAwXlKYMaZKfpqvmXy4GDthyaLqvC57UdMtYL3Q+9bfEu+Zq4kmI6tW/Qx6Dx5efD9HuobZblXvUFcMKTTEPUp3E=,iv:jPIqq4gK8tSTpN+j6pgdC5UXlFpCtu5sSTYyjxhpafo=,tag:xOWyFcNB8q7J1o4kVFR5Yw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
