open web ui sso4

--- a/argocd/apps/open-webui/manifests/secrets.yaml
+++ b/argocd/apps/open-webui/manifests/secrets.yaml
@@ -5,7 +5,7 @@ metadata:
 type: Opaque
 stringData:
     OATH_CLIENT_ID: ENC[AES256_GCM,data:MgG7ntND2bOwPIeAzYBnnPnOlqGSikp3ZTS3EdtonSAZnGWOgjNUig==,iv:4ab+a9B7gmO3Au57SPwYsZDfGhKorS2xN5F0MhFUCDA=,tag:Z4GxZ97pHWrh6JSRirweUw==,type:str]
-    OATH_CLUIENT_SECRET: ENC[AES256_GCM,data:rXeOgnMsUwbIqIPNQUOEarrgs+NWiRk7ltHhJHRzUmZ7ufCTrl7Sh7Kje+u+M1n7kiOvZXx4oIXaGSTF5v8N/FrBiSNrnTGdDPWdzpZF1FF9oop5GJtjJIanwrMUv0biicWmXv0XhVPZ2d0O4rxTf5fsiYL+xk8WsgmMFlhihrE=,iv:PfjK8OaHNPLrsaWcKTQvWxIdUkJVDAGpIGpEiiokTaM=,tag:4W1ZkxwLl5HMnWh0Wq1lkg==,type:str]
+    OATH_CLIENT_SECRET: ENC[AES256_GCM,data:HnTOGuaWi5dVDL+ivC7f1osH+2B6am75l5qoUNo5XuYVF3VVYkixJU7+HhxDPmYynoXehFVbuRToEnRjOvmIcUuj6qx3+KqWZxv1APokfz7eB0QBoulu7DeIWUiwNdVwIqCQtq7rAJpA/530BXIYDPO9vBHees0hFy60IjjKtrw=,iv:V8jfiIDhFXoqNfedGBFx7mc39r4oqkw9e+9FnOn01Mg=,tag:22/lLEra90hLw7TGlGC4IQ==,type:str]
     OAUTH_PROVIDER_URL: ENC[AES256_GCM,data:2JfJnMfD7BdOujtkD+zjeCGVTWN0zoQOKsvknepAEmMk5CpfBizcXOfEjhy9zDyR9XgVEpbJmXRx4a17rNIDyUdDitmpg1QBkge8gY4zRM4ujc4yjiEW,iv:vql0d3E+pKh08rrqK/HIFJJjPuj/Z2nvhkFUy74tvBY=,tag:CpByeFKU8TAIXykTzZgGkQ==,type:str]
 sops:
     kms: []
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-24T17:42:37Z"
-    mac: ENC[AES256_GCM,data:HdK8XGSbKwU8hwII9vCwser9kjuR72W4P5FbDFSvORzC0c/D35mKp+uzU8UyqHhjQLWePD8pdQe/gyAzWD+NFlwrXxPEey+9Ynr7QEP9m+HhBSHSVm673Nn7zXIOQ2wRQYEnlU0Qagf4fsWR7b4dw+EWeMmMc1ea9A5nxfXwdCI=,iv:8IU/GyG6aXvSP8K6Myake6I4AfBxixhyvRUIhsZakmI=,tag:E08lne0FiGtUMlwEx8kF7Q==,type:str]
+    lastmodified: "2025-03-24T17:56:00Z"
+    mac: ENC[AES256_GCM,data:1Ni/1fZJaKnAn2ClF46BTOilLrdG3sfwyKA4/P2vtF0pIWXt+0u3Pa8KnsTZMZjV/Sh1mXvkNF7h1PtPNfGNxn/B4pOm8y6RD4v7gyXajhbxHlkmUFNul/sIPyPk+Fj4TB9EnXPUdGCbSeWo+mdtSHxvh42EsqO79UJ/1THfVng=,iv:TbiwKRWJ01QztLr6C7iBGTYrZ9LZMRdSAraBUT9Ts48=,tag:ChG0TxFatJhIzuuBGR+U/Q==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
