open web ui sso5

--- a/argocd/apps/open-webui/manifests/secrets.yaml
+++ b/argocd/apps/open-webui/manifests/secrets.yaml
@@ -4,8 +4,8 @@ metadata:
     name: chat-secrets
 type: Opaque
 stringData:
-    OATH_CLIENT_ID: ENC[AES256_GCM,data:MgG7ntND2bOwPIeAzYBnnPnOlqGSikp3ZTS3EdtonSAZnGWOgjNUig==,iv:4ab+a9B7gmO3Au57SPwYsZDfGhKorS2xN5F0MhFUCDA=,tag:Z4GxZ97pHWrh6JSRirweUw==,type:str]
-    OATH_CLIENT_SECRET: ENC[AES256_GCM,data:HnTOGuaWi5dVDL+ivC7f1osH+2B6am75l5qoUNo5XuYVF3VVYkixJU7+HhxDPmYynoXehFVbuRToEnRjOvmIcUuj6qx3+KqWZxv1APokfz7eB0QBoulu7DeIWUiwNdVwIqCQtq7rAJpA/530BXIYDPO9vBHees0hFy60IjjKtrw=,iv:V8jfiIDhFXoqNfedGBFx7mc39r4oqkw9e+9FnOn01Mg=,tag:22/lLEra90hLw7TGlGC4IQ==,type:str]
+    OAUTH_CLIENT_ID: ENC[AES256_GCM,data:0+q0UITOhkyGWqbDGLhcHjbEUXfiAE4IUOM4mlkLvZb3QFbUXBQmqg==,iv:PJUzD2qAhlq0R21NZFx3RmGkV4IyyhOJJFJKjJo5yYk=,tag:egTcvDVP/Erm4tIv/aSDTg==,type:str]
+    OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:VDZDwQkIpOiZuy8iwh4DNj7SKlFfJN1VOa9+i+aJmIcgX+Fqrdhv5WjsWIp0NoTin3WTMxWuaS3owy2rplbEhji+o4/aS4lXVnnGyxAVMOb5p3pdkeNXz1hAZUQJFlBKpbd0s3ZXH287oM3cul3Ij/Wk7LBQqqbcrcivG9+3P1g=,iv:b3LCaPgXwq0hDBge5ci+gh5uO9Dwa5RvU+LikCGj25I=,tag:+qVmUg06W8qUL1+w5SxEAQ==,type:str]
     OAUTH_PROVIDER_URL: ENC[AES256_GCM,data:2JfJnMfD7BdOujtkD+zjeCGVTWN0zoQOKsvknepAEmMk5CpfBizcXOfEjhy9zDyR9XgVEpbJmXRx4a17rNIDyUdDitmpg1QBkge8gY4zRM4ujc4yjiEW,iv:vql0d3E+pKh08rrqK/HIFJJjPuj/Z2nvhkFUy74tvBY=,tag:CpByeFKU8TAIXykTzZgGkQ==,type:str]
 sops:
     kms: []
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-24T17:56:00Z"
-    mac: ENC[AES256_GCM,data:1Ni/1fZJaKnAn2ClF46BTOilLrdG3sfwyKA4/P2vtF0pIWXt+0u3Pa8KnsTZMZjV/Sh1mXvkNF7h1PtPNfGNxn/B4pOm8y6RD4v7gyXajhbxHlkmUFNul/sIPyPk+Fj4TB9EnXPUdGCbSeWo+mdtSHxvh42EsqO79UJ/1THfVng=,iv:TbiwKRWJ01QztLr6C7iBGTYrZ9LZMRdSAraBUT9Ts48=,tag:ChG0TxFatJhIzuuBGR+U/Q==,type:str]
+    lastmodified: "2025-03-24T17:56:55Z"
+    mac: ENC[AES256_GCM,data:qm++CzCSATD30/XmbUEyHVqFuB2c4z5k+QTYGNicdr02dCWtnnhUxu4zOfnIDhkutDsL36VLg6doubhYaJrR9yNNKZ6oNQ6xwgPbFmRHK8sb6tj72gbrY9JSM7b5MRU2l0Vo23t+n1VhOhBwhNR8oCC9AVTBbtP8JEUwDpcZvLA=,iv:kFaUojvV90huHHjTwA7aReU8I8lRb1UOja9I3ovLbxA=,tag:ESum4CeXifh9P9BDmXKcig==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
