open web ui sso6

--- a/argocd/apps/open-webui/manifests/values.yaml
+++ b/argocd/apps/open-webui/manifests/values.yaml
@@ -36,8 +36,8 @@ extraEnvVars:
         name: chat-secrets
         key: OAUTH_CLIENT_SECRET
   - name: OAUTH_PROVIDER_NAME
-    value: authentik
-  - name: OAUTH_PROVIDER_URL
+    value: Authentik
+  - name: OPENID_PROVIDER_URL
     valueFrom:
       secretKeyRef:
         name: chat-secrets
