--- a/argocd/apps/open-webui/manifests/secrets.yaml
+++ b/argocd/apps/open-webui/manifests/secrets.yaml
@@ -6,7 +6,7 @@ type: Opaque
 stringData:
     OAUTH_CLIENT_ID: ENC[AES256_GCM,data:0+q0UITOhkyGWqbDGLhcHjbEUXfiAE4IUOM4mlkLvZb3QFbUXBQmqg==,iv:PJUzD2qAhlq0R21NZFx3RmGkV4IyyhOJJFJKjJo5yYk=,tag:egTcvDVP/Erm4tIv/aSDTg==,type:str]
     OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:VDZDwQkIpOiZuy8iwh4DNj7SKlFfJN1VOa9+i+aJmIcgX+Fqrdhv5WjsWIp0NoTin3WTMxWuaS3owy2rplbEhji+o4/aS4lXVnnGyxAVMOb5p3pdkeNXz1hAZUQJFlBKpbd0s3ZXH287oM3cul3Ij/Wk7LBQqqbcrcivG9+3P1g=,iv:b3LCaPgXwq0hDBge5ci+gh5uO9Dwa5RvU+LikCGj25I=,tag:+qVmUg06W8qUL1+w5SxEAQ==,type:str]
-    OAUTH_PROVIDER_URL: ENC[AES256_GCM,data:2JfJnMfD7BdOujtkD+zjeCGVTWN0zoQOKsvknepAEmMk5CpfBizcXOfEjhy9zDyR9XgVEpbJmXRx4a17rNIDyUdDitmpg1QBkge8gY4zRM4ujc4yjiEW,iv:vql0d3E+pKh08rrqK/HIFJJjPuj/Z2nvhkFUy74tvBY=,tag:CpByeFKU8TAIXykTzZgGkQ==,type:str]
+    OPENID_PROVIDER_URL: ENC[AES256_GCM,data:1tDIBWdg/Vxv4oUlvYe1nSzpvj3eoUEj7pjlRF95ZvrMUI+HKDQeWGRfHOxzgwi3SOzArb+avvuHixxnX+rPTgMCehdLH8qkS3qDVnzXOYuJGaWhBB19,iv:5yBa4C/KtV71VhwQ1jCGJMjlqQCJ+XRS4igfd5z2aNs=,tag:oEqdzEhXmWSgmY5XSrFXzQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-24T17:56:55Z"
-    mac: ENC[AES256_GCM,data:qm++CzCSATD30/XmbUEyHVqFuB2c4z5k+QTYGNicdr02dCWtnnhUxu4zOfnIDhkutDsL36VLg6doubhYaJrR9yNNKZ6oNQ6xwgPbFmRHK8sb6tj72gbrY9JSM7b5MRU2l0Vo23t+n1VhOhBwhNR8oCC9AVTBbtP8JEUwDpcZvLA=,iv:kFaUojvV90huHHjTwA7aReU8I8lRb1UOja9I3ovLbxA=,tag:ESum4CeXifh9P9BDmXKcig==,type:str]
+    lastmodified: "2025-03-24T19:53:23Z"
+    mac: ENC[AES256_GCM,data:E3Z9jv0v66WeG1OI9UPpJlWrHGiTE54AJl49WGpfLCwd7MbradXZudlXmbgrjLNzZfvEGmWozgF65OHVNL3tAwXlKYMaZKfpqvmXy4GDthyaLqvC57UdMtYL3Q+9bfEu+Zq4kmI6tW/Qx6Dx5efD9HuobZblXvUFcMKTTEPUp3E=,iv:jPIqq4gK8tSTpN+j6pgdC5UXlFpCtu5sSTYyjxhpafo=,tag:xOWyFcNB8q7J1o4kVFR5Yw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
