open web ui sso7

--- a/argocd/apps/open-webui/manifests/values.yaml
+++ b/argocd/apps/open-webui/manifests/values.yaml
@@ -44,4 +44,5 @@ extraEnvVars:
         key: OAUTH_PROVIDER_URL
   - name: ENABLE_OAUTH_SIGNUP
     value: 'true'
-
+  - name: OAUTH_MERGE_ACCOUTNS_BY_EMAIL
+    value: 'true'
